@@ -11,6 +11,7 @@ build_requires:
   Test::Shared::Fixture::Wikibase::Datatype::Property::Wikidata::InstanceOf: 0.17
   Unicode::UTF8: 0
   Wikibase::Datatype: 0.03
+  Wikibase::Datatype::Lexeme: 0.19
   Wikibase::Datatype::Property: 0.12
 configure_requires:
   ExtUtils::MakeMaker: 6.59
